# squonk2-fastapi-ws-event-stream

./: .gitignore  .hadolint.yaml  .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md  ampq_publisher.py  docker-compose.yml  docker-entrypoint.sh  internal.env  logging.config  public.env  pyproject.toml  requirements.txt  simple_es_publisher.py  simple_es_subscriber.py  simple_message_publisher.py  simple_ws_client.py  ws_listener.py
.devcontainer/: Dockerfile  devcontainer.json  requirements.txt
.github/workflows/: build.yaml  tag.yaml
ansible/: parameters-local.yaml  parameters-template.yaml
ansible/roles/app/defaults/: main.yaml
ansible/roles/app/tasks/: deploy.yaml  undeploy.yaml
ansible/roles/app/templates/: deployment.yaml.j2  ingress.yaml.j2  service-api.yaml.j2  service-internal.yaml.j2  service-public.yaml.j2  service-ws.yaml.j2
ansible/roles/app/vars/: main.yaml
app/: app.py
hooks/: pre-stop-hook.sh
probes/: liveness.sh  readiness.sh
rabbitmq-enabled-plugins/: README.txt
