[tool.poetry]
name = "squonk2-fastapi-ws-event-stream"
version = "2.0.0"
package-mode = false
description = "A Squonk2 Python FastAPI AS EvenStream Service"
authors = ["Alan Christie <alan.christie@matildapeak.com>"]
readme = "README.md"

[tool.poetry.dependencies]
# Locked versions (for now)
fastapi = "0.115.8"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
# Flexible versions
pydantic = "^2.10.6"
python = "^3.12"
rstream = "^0.20.9"
shortuuid = "^1.0.13"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.0"
pylint = "^3.3.4"
python-dateutil = "^2.9.0"
simple_websocket = "^1.1.0"
websockets = "^15.0.0"
httpie = "^3.2.4"
isort = "^6.0.0"
black = "^25.1.0"
mypy = "^1.15.0"
im-protobuf = "^7.1.0"

[tool.poetry.group.deploy.dependencies]
ansible = "^11.2.0"
kubernetes = "^31.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
