[tool.poetry]
name = "squonk2-fastapi-ws-event-stream"
version = "3.0.0"
package-mode = false
description = "A Squonk2 Python FastAPI AS EvenStream Service"
authors = ["Alan Christie <alan.christie@matildapeak.com>"]
readme = "README.md"

[tool.poetry.dependencies]
# Locked versions (for now)
fastapi = "^0.116.1"
uvicorn = {extras = ["standard"], version = "^0.35.0"}
python-dateutil = "2.9.0"
# Flexible versions
pymemcache = "^4.0.0"
pydantic = "^2.11.7"
python = "^3.13"
rstream = "^0.30.0"
shortuuid = "^1.0.13"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.0"
pylint = "^3.3.4"
simple_websocket = "^1.1.0"
websockets = "^15.0.0"
httpie = "^3.2.4"
isort = "^6.0.0"
black = "^25.1.0"
mypy = "^1.15.0"
im-protobuf = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.commitizen]
name = "cz_customize"
version_provider = "pep621"
prerelease_offset = 1

[tool.commitizen.customize]
schema_pattern = "(build|bump|chore|ci|dev|docs|feat|fix|perf|refactor|remove|style|test):(\\s.*)"
commit_parser = "^(?P<change_type>build|bump|chore|ci|dev|docs|feat|fix|perf|refactor|remove|style|test):\\s(?P<message>.*)?"
# By excluding 'bump', 'ci', 'dev', and 'docs' from
# 'change_type_map', 'change_type_order' and 'changelog_pattern'
# we omit the corresponding commit comments from the CHANGELOG.
# The order of types in the CHANGELOG is dictated by the type_order
change_type_map = {"feat" = "New Features", "fix" = "Bug Fixes", "perf" = "Performance Improvements", "refactor" = "Refactoring", "chore" = "General Improvements", "remove" = "Removed", "style" = "Stylistic Changes", "test" = "Testing", "build" = "Build"}
change_type_order = ["BREAKING CHANGE", "New Features", "Bug Fixes", "Performance Improvements", "Refactoring", "General Improvements", "Removed", "Stylistic Changes", "Testing", "Build"]
changelog_pattern = "^(build|chore|feat|fix|perf|refactor|remove|style|test)"
